WIP connecting up logic and UI

--- a/web-proof-machine/src/flow.css
+++ b/web-proof-machine/src/flow.css
@@ -2,8 +2,8 @@
     top: auto;
     width: 18px;
     height: 18px;
-    transform: none; 
-    border: solid 2px white; 
+    transform: none;
+    border: solid 2px white;
     background-color: black;
 }
 
@@ -18,19 +18,20 @@
 .react-flow__panel.center {
     top: auto;
     transform: auto;
-    margin: 0px; 
+    margin: 0px;
 }
 
 .gadgetPalette {
     background-color: rgba(225, 225, 225, 0.9);
     width: 100vw;
     margin: 0px;
-    display: flex; 
-    position: relative; 
-    left: 0px; 
-    top: 0px; 
+    display: flex;
+    position: relative;
+    left: 0px;
+    top: 0px;
+    overflow-x: scroll;
 }
 
 .insertGadgetButton {
-    display: flex; 
+    display: flex;
 }
