--- a/web-proof-machine/src/flow.css
+++ b/web-proof-machine/src/flow.css
@@ -35,3 +35,8 @@
 .insertGadgetButton {
     display: flex;
 }
+
+.react-flow__node.selectable:focus {
+    border: solid 3px gray;
+    border-radius: 15px
+}
