--- a/web-proof-machine/src/flow.css
+++ b/web-proof-machine/src/flow.css
@@ -8,11 +8,11 @@
 }
 
 .react-flow__handle-left {
-    left: -8px;
+    left: -10px;
 }
 
 .react-flow__handle-right {
-    right: -8px;
+    right: -10px;
 }
 
 .react-flow__panel.center {
@@ -36,7 +36,11 @@
     display: flex;
 }
 
+.react-flow__node {
+    border: solid 2px #00000000;
+}
+
 .react-flow__node.selectable:focus {
-    border: solid 3px gray;
+    border: solid 2px gray;
     border-radius: 15px
 }
