Fix handle border color

--- a/web-proof-machine/src/flow.css
+++ b/web-proof-machine/src/flow.css
@@ -3,7 +3,7 @@
     width: 18px;
     height: 18px;
     transform: none;
-    border: solid 2px white;
+    border: solid 2px rgb(252, 252, 252);
     background-color: black;
 }
 
