--- a/web-proof-machine/src/index.css
+++ b/web-proof-machine/src/index.css
@@ -10,7 +10,7 @@ body {
 }
 
 .hole {
-    background-color: white;
+    background-color: rgb(252, 252, 252);
     width: 20px;
     height: 20px;
     border: solid 2px black;
