--- a/web-proof-machine/src/flow.css
+++ b/web-proof-machine/src/flow.css
@@ -29,6 +29,8 @@
     position: relative;
     left: 0px;
     top: 0px;
+    padding-left: 3px;
+    padding-right: 3px;
     overflow-x: scroll;
 }
 
