--- a/web-proof-machine/src/index.css
+++ b/web-proof-machine/src/index.css
@@ -9,6 +9,32 @@ body {
     font-size: 1em;
 }
 
+.problemSelectionPane {
+    width: 100vw;
+    text-align: center;
+    padding-top: 100px;
+}
+
+.problemSelectionText {
+    font-size: 1.4em;
+    margin: 20px;
+}
+
+.problemSelectionButtons > button {
+    font-size: 1.2em;
+    background-color: white;
+    border: solid 2px black;
+    border-radius: 10px;
+    padding: 10px;
+    margin: 10px
+}
+
+.problemSelectionButtons > button:hover {
+    background-color: black;
+    color: white;
+}
+
+
 .hole {
     background-color: rgb(252, 252, 252);
     width: 20px;
