Refactor: Primitives structured around Term
* Display of internal connections still missing

--- a/web-proof-machine/src/index.css
+++ b/web-proof-machine/src/index.css
@@ -48,6 +48,10 @@ body {
     user-select: none;
 }
 
+.hole-function {
+    background-color: "#ffcccc"
+}
+
 .node {
     margin: 5px;
     border: solid 2px black;
