--- a/web-proof-machine/src/flow.css
+++ b/web-proof-machine/src/flow.css
@@ -69,6 +69,6 @@
 }
 
 .react-flow__node.selectable:focus {
-    border: solid 2px gray;
+    box-shadow: 0px 0px 10px gray;
     border-radius: 15px
 }
