--- a/web-proof-machine/components/flow.css
+++ b/web-proof-machine/components/flow.css
@@ -72,3 +72,15 @@
     box-shadow: 0px 0px 10px gray;
     border-radius: 15px
 }
+
+.react-flow__controls-button {
+    width: 30px;
+    height: 30px;
+}
+
+.react-flow__controls-button svg {
+    max-width: 20px;
+    max-height: 20px;
+    width: 20px;
+    height: 20px;
+}
