--- a/web-proof-machine/components/game/flow.css
+++ b/web-proof-machine/components/game/flow.css
@@ -14,10 +14,6 @@
     right: -10px;
 }
 
-.react-flow__handle-valid {
-    transform: scale(1.2);
-}
-
 .react-flow__panel.center {
     top: auto;
     left: auto;
@@ -32,4 +28,8 @@
 .react-flow__node.selectable:focus {
     box-shadow: 0px 0px 10px gray;
     border-radius: 15px
+}
+
+.react-flow__handle.valid svg {
+    fill: theme('colors.green');
 }
