--- a/web-proof-machine/components/game/diagram/flow.css
+++ b/web-proof-machine/components/game/diagram/flow.css
@@ -27,8 +27,9 @@
 }
 
 .react-flow__node.selectable:focus {
-    box-shadow: 0px 0px 10px gray;
-    border-radius: 15px
+    box-shadow: 0px 10px 30px gray;
+    border-radius: 15px;
+    @apply backdrop-blur-sm;
 }
 
 .react-flow__handle.valid svg {
